--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="fpsText">FPS: 0</div>
     <div id="settingsBox">
         <div id="settingsBoxHeader">General settings:</div>
         <input type="button" value="Start" id="pauseButton"><br>
